# sfsipua-svn

GoogleDeskTopapi/documentation/: GoogleDesktopAPI.idl  GoogleDesktopDisplayAPI.idl  actionsapi.html  activex.html  communication.html  developerguide.html  displayapi.html  eventapi.html  framework.html  gdpinstaller.html  indexapi.html  queryapi.html  quickhelper.html  schemas.xml  script.html  sdk_release_notes.txt  sidebar_plugin_guidelines.html  uiguidelines.html
GoogleDeskTopapi/samples/GoogleDesktopComponentGVI/: GoogleDesktopComponentGVI.def  GoogleDesktopComponentGVI.idl  GoogleDesktopComponentGVI.rc  GoogleDesktopComponentGVI.sln  GoogleDesktopComponentGVI.vcproj  debug_install.bat  debug_uninstall.bat  google_desktop_component_gvi.cc  gvi_parser.cc  gvi_parser.h  gvi_plugin.cc  gvi_plugin.h  readme.txt  release_install.bat  release_uninstall.bat  resource.h  stdafx.cc
GoogleDeskTopapi/samples/GoogleDesktopComponentSample1/: GoogleDesktopComponentSample1.cpp  GoogleDesktopComponentSample1.def  GoogleDesktopComponentSample1.idl  GoogleDesktopComponentSample1.rc  GoogleDesktopComponentSample1.rgs  GoogleDesktopComponentSample1.sln  GoogleDesktopComponentSample1.vcproj  IndexShortcut.cpp  IndexShortcut.h  IndexShortcut.rgs  readme.txt  resource.h  stdafx.cpp  stdafx.h
GoogleDeskTopapi/samples/GoogleDesktopComponentSample2/: GoogleDesktopComponentSample2.cpp  GoogleDesktopComponentSample2.h  GoogleDesktopComponentSample2.rc  GoogleDesktopComponentSample2.sln  GoogleDesktopComponentSample2.vcproj  readme.txt  resource.h  stdafx.cpp  stdafx.h
GoogleDeskTopapi/samples/GoogleDesktopComponentSample3/: GoogleDesktopComponentSample3.def  GoogleDesktopComponentSample3.rc  GoogleDesktopComponentSample3.sln  GoogleDesktopComponentSample3.vcproj  TrillianCapture.cpp  plugin.h  readme.txt  resource.h  stdafx.cpp
GoogleDeskTopapi/samples/GoogleDesktopDisplayCSharpSample/: AssemblyInfo.cs  Imports.cs  Plugin.cs  (+4 more)
GoogleDeskTopapi/tools/: sidebar_no_except_filter.reg
Libs/rtp/jrtplib-2.9/: ChangeLog  Makefile.in  README.TXT  configure  configure.in  jrtplib2_9.dsp  jrtplib2_9.dsw  rtpconfig_unix.h.in  rtpconfig_win.h  rtpconnection.cpp  rtpcontributingsources.cpp  rtpdebug.cpp  rtpdefines.h  rtpdestlist.cpp  rtperror.cpp  rtpexceptionstructs.h  rtphandlers.cpp  rtphandlers.h  rtpiptable.cpp  rtpiptable.h  rtplocalinfo.cpp  rtpmcasttable.cpp  rtppacket.cpp  rtppacketprocessor.cpp  rtprandom.cpp  rtprtcpmodule.cpp  rtpsession.cpp  rtpsourcedata.cpp  rtpsourcedescription.cpp  rtpsourcedescription.h  rtpsources.cpp  rtpsrclist.cpp  rtptimeutil.cpp
Libs/rtp/jrtplib-2.9/doc/: manual.tex  manual.txt  tutorial.tex  tutorial.txt
Libs/rtp/jrtplib-2.9/examples/: sample1.cpp  sample2.cpp
Libs/rtp/jthread-1.1.2/: ChangeLog  Makefile.am  Makefile.in  README.TXT  TODO  configure  configure.in  jthread.dsp  jthread.vcproj  jthread_wce.vcproj
Libs/rtp/jthread-1.1.2/src/: Makefile.am  Makefile.in
Libs/rtp/ortp-0.8.1/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  configure  configure.ac  ortp-config.h  ortp-config.h.in  ortp.pc.in  ortp.spec  ortp.spec.in  pkg.list
Libs/rtp/ortp-0.8.1/docs/: Makefile.am  Makefile.in
Libs/rtp/ortp-0.8.1/docs/html/: index.sgml  ortp-library-management-functions.html  ortp-multiplexing-sessions---in-a-one-thread-design.html  ortp-rtp-payloads-and-profiles.html  ortp-rtpsession-api.html  ortp-telephone-events---rfc2833-.html
Libs/rtp/ortp-0.8.1/docs/sgml/: multiplexing.sgml  payloads.sgml  rtpsessionapi.sgml  stackmanagement.sgml  telephoneevents.sgml
Libs/rtp/ortp-0.8.1/docs/tmpl/: multiplexing.sgml  payloads.sgml  rtpsessionapi.sgml
Libs/rtp/ortp-0.8.1/include/: Makefile.in
Libs/rtp/ortp-0.8.1/include/ortp/: Makefile.am  Makefile.in  ortp.h  payloadtype.h  rtcp.h  rtp.h  rtpport.h  rtpsession.h  rtpsignaltable.h  sessionset.h  str_utils.h  telephonyevents.h
Libs/rtp/ortp-0.8.1/src/: Makefile.am  Makefile.in  avprofile.c  errno-win32.h  export.c  export.h  jitterctl.c  jitterctl.h  ortp-config-win32.h  ortp.c  payloadtype.c  port_fct.c  port_fct.h  posixtimer.c  rtcp.c  rtcpparse.c  rtpmod.c  rtpmod.h  rtpparse.c  rtpsession.c  rtpsignaltable.c  rtptimer.c  rtptimer.h  scheduler.c  scheduler.h  sessionset.c  str_utils.c  telephonyevents.c  utils.c  utils.h
Libs/rtp/ortp-0.8.1/src/tests/: Makefile.am  Makefile.in  mrtprecv.c  mrtpsend.c  rtpmemtest.c  rtprecv.c  rtpsend.c  tevmrtprecv.c  tevrtprecv.c  tevrtpsend.c
demos/rtc/: readme.txt
face/msnface/: ChildView.cpp  ChildView.h  DemoDlgA.cpp  DemoDlgA.h  DemoDlgB.cpp  DemoDlgB.h  HyperLink.cpp  HyperLink.h  ImageTabWnd.cpp  ImageTabWnd.h  MainFrm.cpp  MainFrm.h  Messenger.clw  Messenger.cpp  Messenger.dsp  Messenger.dsw  Messenger.h  Messenger.rc  ReadMe.txt  Resource.h  StdAfx.cpp  StdAfx.h
face/popoface/: CNButton.cpp  CNButton.h  CNIcq.clw  CNIcq.cpp  CNIcq.dsp  CNIcq.dsw  CNIcq.h  CNIcq.rc  CNIcq2.clw  CNIcqDlg.cpp  CNIcqDlg.h  CNMenu.cpp  CNMenu.h  CNPopupMenu.cpp  CNPopupMenu.h  FormatBar.cpp  FormatBar.h  Gif89a.cpp  Gif89a.h  HyperLink.CPP  HyperLink.H  IMChat.cpp  IMChat.h  IMShortcutTool.cpp  IMShortcutTool.h  IMTab.cpp  IMTab.h  IMToolWin.cpp  IMToolWin.h  IMTree.cpp  IMTree.h  IMainHeader.cpp  IMainHeader.h  IMainPanel.cpp  IMainPanel.h  ImageDataObject.cpp  ImageDataObject.h  ImageSelector.cpp  ImageSelector.h  MSNButton.cpp  (+15 more)
tests/acm-test/: ACM.cpp  Acmcodec.cpp  Acmcodec.h  Resource.h  StdAfx.h  WavInOut.cpp  WavInOut.h  acmtest.clw  acmtest.cpp  acmtest.dsp  acmtest.h  acmtest.rc  acmtestDlg.cpp  acmtestDlg.h
tests/acmtest/: ACM.h  Acmcodec.cpp  Acmcodec.h  ReadMe.txt  Resource.h  StdAfx.cpp  acmtest.clw  acmtest.dsp  acmtest.dsw  acmtest.rc  acmtestDlg.cpp  acmtestDlg.h
tests/siptest/: WaveIn.h  osipparser2.lib  test.c  test.cpp  test.dsp  test.sln  test.vcproj  test2.cpp  test2_sip_rtp.cpp
tests/siptestwin/: AudioCode.cpp  ReadMe.txt  Resource.h  StdAfx.cpp  StdAfx.h  WaveIn.cpp  WaveIn.h  eXosip.lib  oRTP.lib  osip2.lib  testwin.clw  testwin.cpp  testwin.dsp  testwin.dsw  testwin.h  testwin.rc  testwinDlg.cpp  testwinDlg.h
(+544 files in other folders)
